--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas - Platform VECTOR</title>
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="ini css.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -223,3 +223,4 @@
 
 </footer>
 </html>
+
